tweak preliminary spacing issue with intro part of website

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,41 @@
-.container1{
+.intro{
   background-image: url("../images/backgrounds/h_img.jpg");
   height: 100vh;
   width: 100vw;
-  background-position: center;
   background-repeat: no-repeat;
-  /* background-attachment: fixed; */
+  background-position: center;
+}
+
+.introText{
+  text-align: center;
+}
+
+.introPic{
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+  
+
+
+
+/* .container1{
+  
+}
+
+
+.openerText{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+
 }
 .container3{
   background-image: url("../images/backgrounds/s_image.jpg");
   height: 100vh;
   width: 100vw; 
-  /* background-position: center; */
   background-repeat: no-repeat;
-  /* background-attachment: fixed; */
 }
 .container5{
   background-image: url("../images/backgrounds/c_image.jpg");
@@ -20,14 +43,9 @@
   width: 100vw;
   background-position: center;
   background-repeat: no-repeat;
-  /* background-attachment: fixed; */
 }
 
-.openerText{
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-}
+
 .aboutUs{
   display: flex;
   justify-content: center;
@@ -45,7 +63,8 @@
 .portfolioPics{
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap:;
+  margin:10%
 
 }
 
@@ -58,3 +77,6 @@
 .productDes{
   display: none;
 }
+.box {
+  padding: 0 5px 0 5px;
+} */
